ksumit/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeflow-loadbalancer
  namespace: istio-system
spec:
  type: LoadBalancer
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
